--- a/version/index1.html
+++ b/version/index1.html
@@ -187,7 +187,7 @@
     </table>
 
     <script>
-        const socket = io.connect('http://127.0.0.1:5000');
+        const socket = io.connect('https://ffmpegaudiobridge.onrender.com');
         const audioListDiv = document.getElementById('audioList');
         const transcriptionTable = document.getElementById('transcriptionTable').getElementsByTagName('tbody')[0];
 
